[project]
name = "torch_neuroencoders"
dynamic = ["version"]
description = "Neuroencoders is a Python package for the analysis of neural data, including encoding models, decoding models, and visualization tools."
authors = [
    { name = "Dima Bryzgalov", email = "bryzgalovdm@gmail.com" },
    { name = "Théotime de Charrin", email = "theotime.decharrin@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "bokeh>=3.7.3",
    "cmcrameri>=1.9",
    "denseweight>=0.1.2",
    "dill>=0.3.9",
    "ffmpeg>=1.4",
    "graphviz>=0.20.3",
    "h5py>=3.13.0",
    "lxml>=5.3.2",
    "mat73>=0.65",
    "matplotlib>=3.6.2",
    "numba>=0.60.0",
    "opencv-python-headless>=4.11.0.86",
    "pandas>=2.1.0",
    "pyarrow>=22.0.0",
    "pydot>=3.0.4",
    "pydotplus>=2.0.2",
    "pyyaml>=6.0.2",
    "scikeras>=0.12.0",
    "scikit-image>=0.24.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "shapely>=2.1.0",
    "statannotations>=0.7.2",
    "statsmodels>=0.14.0",
    "tables>=3.10.1",
    "termplotlib>=0.3.9",
    "tqdm>=4.67.1",
    "umap-learn[plot]>=0.5.9.post2",
    "wandb>=0.20.1",
    "xgboost>=3.2.0",
    "pynapple",
    "numpy>=2.2.6",
    "pykeops>=2.3",
]

[project.optional-dependencies]
gpu = [
    "cucim-cu12>=25.10",
    "cudf-cu12>=25.10",
    "cugraph-cu12>=25.10",
    "cuml-cu12>=25.10",
    "cuvs-cu12>=25.10",
    "dask-cudf-cu12>=25.10",
    "nx-cugraph-cu12>=25.10",
    "pylibraft-cu12>=25.10",
    "raft-dask-cu12>=25.10",
]
dev = [
    # Extra runtime features for developers
    "bokeh>=3.8.1",
    "dash>=3.1.1",
    "ephyviewer>=1.7.0",
    "gputil>=1.4.0",
    "imageio[ffmpeg,pyav]>=2.37.0",
    "keras-tuner>=1.4.8",
    "kilosort>=4.1.1",
    "memory-profiler>=0.61.0",
    "openpyxl>=3.1.5",
    "pdf2image>=1.17.0",
    "pillow>=12.0.0",
    "plotly>=6.2.0",
    "protobuf>=6.31.1",
    "psutil>=7.0.0",
    "pympler>=1.1",
    "python-pptx>=1.0.2",
    "requests>=2.32.4",
    "spikeinterface[full]>=0.103.0",
    "tensorboard>=2.20.0",
    "werkzeug<3.0.0",
    "xlsxwriter>=3.2.5",
]
# Clean meta-packages utilizing standard references
all = [
    "torch_neuroencoders[gpu]",
    "torch_neuroencoders[dev]"
]

[dependency-groups]
dev = [
    "torch_neuroencoders[all]", # Automatically pulls everything from above safely
    "pytest>=9.0.2",
    "parameterized>=0.9.0",
    "pre-commit>=4.2.0",
    "isort>=6.0.1",
    "ipykernel>=6.29.5",
    "ipympl>=0.9.7",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "pandas-stubs~=2.3.3",
    "scipy-stubs~=1.17.1",
    "ruff>=0.11.8",
    "pyright>=1.1.409",
    "tensorboard-plugin-profile==2.22.1",
    "polars>=1.40.1",
]

[tool.ruff]
line-length = 88
# Stripped down minimal exclusions (Ruff defaults cover the rest)
exclude = [
    ".ipynb_checkpoints",
    "*.ipynb",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = []
 # Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
case-sensitive = true

# Update: Treat current project as a python package.
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["torch_neuroencoders"]

[tool.uv.sources]
torch_neuroencoders = { workspace = true }
pynapple = { git = "https://github.com/MobsLab/pynapple.git" }


[[tool.uv.index]]
url = "https://pypi.nvidia.com/"

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
